errors.err
ex11b.c: In function ‘main’:
ex11b.c:32:29: error: expected expression before ‘{’ token
     m1.ant = m1.resultant = {'\0'};
                             ^
ex11b.c:33:22: error: expected expression before ‘{’ token
     m1.jogocerteza = {0};
                      ^
ex11b.c: In function ‘deduzindo’:
ex11b.c:148:5: error: invalid initializer
     char senha[tamsenha] = pmp;
     ^
ex11b.c:173:21: error: expected ‘}’ before ‘else’
                     else
                     ^
ex11b.c:208:23: error: assignment to expression with array type
                 senha = m1.ant;
                       ^
ex11b.c:224:23: error: assignment to expression with array type
                 senha = m1.ant;
                       ^
ex11b.c:256:17: error: expected ‘;’ before ‘}’ token
                 }
                 ^
ex11b.c:266:27: error: assignment to expression with array type
                     senha = m1.ant;
                           ^
ex11b.c:149:9: warning: unused variable ‘aux’ [-Wunused-variable]
     int aux;
         ^
ex11b.c: At top level:
ex11b.c:286:5: error: expected identifier or ‘(’ before ‘else’
     else
     ^
ex11b.c:288:7: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘.’ token
     m1.ant = pmp = senha;
       ^
ex11b.c:289:7: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘.’ token
     m1.resultant = pmr;
       ^
ex11b.c:290:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
